--- a/css/style.css
+++ b/css/style.css
@@ -265,3 +265,611 @@ div.gallery img {
     background: #2e2e2e;
     margin-top: 50px;
 }
+@media(max-width: 600px) {
+    .const-number {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    flex-direction: column;
+    }
+    .logo {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    }
+    .navbar {
+    background: #2e2e2e;
+    border-radius: 80px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    flex-direction: column;
+    }
+    .slideshow-container {
+    position: relative;
+    max-width: 1500px;
+    margin: auto;
+    }
+    .parag h1 {
+    background:#fff; 
+    text-transform: uppercase; 
+    font-family: Georgia, 'Times New Roman', Times, serif; 
+    font-weight: bold; 
+    padding: 10px; 
+    border-radius: 15px; 
+    align-items: center; 
+    text-align: start; 
+    margin-right: 60px; 
+    position: relative;
+    }
+.parag p {
+    background: #2e2e2e; 
+    text-transform: capitalize;
+    font-family: Georgia, 'Times New Roman', Times, serif; 
+    padding: 10px; 
+    border-radius: 15px; 
+    align-items: center; 
+    text-align: start; 
+    margin-right: 60px; 
+    position: absolute; 
+    top: 60%;
+}
+    .building {
+    display: flex;
+    padding: 20px;
+    gap: 50px;
+    flex-direction: column;
+    align-items: center;
+    }
+    .company-policy {
+    display: flex;
+    gap:  20px;
+    justify-content: space-between;
+    flex-direction: column;
+    }
+    #myVideo {
+    max-width: 100%;
+    max-height: 100%;
+    align-items: center;
+    }
+    .creative {
+    font-weight: bold;
+    font-size: x-large;
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+    flex-direction: column;
+    }
+    .Testimonial-container {
+    width: 500px;
+    height: 100px;
+    background-color: slateblue;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgb(0, 0, 0.03);
+    min-width: 400px;
+    padding: 70px 20px;
+    margin: 5px;
+    color: white;
+    position: relative;
+    align-items: center;
+    margin-top: 70px;
+    }
+    .numb {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+    gap: 50px;
+    flex-direction: column;
+    }
+    .mobile-numbers {
+    display: flex; 
+    justify-content: space-between; 
+    align-items: center;
+    }
+}
+@media(max-width: 768px) {
+    .welcome-msg {
+    display: flex;
+    justify-content: space-between;
+    background: #2e2e2e;
+    align-items: center;
+    text-align: center;
+    color: #fff;
+    padding: 20px;
+    }
+.vl {
+    border-left: 1px solid #454545;
+    height: 30px;
+}
+.const-number {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+.logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.numb {
+    display: flex;
+    align-items: center; 
+}
+.mobile-numbers {
+    display: flex; 
+    justify-content: space-between; 
+    gap: 30px; 
+    align-items: center;
+}
+.address {
+    display: flex; 
+    justify-content: space-between; 
+    gap: 30px;
+}
+.num:hover {
+    color: #efae16;
+    animation: 5sec ease;
+    border-style: none;
+}
+
+.navbar {
+    background: #2e2e2e;
+    border-radius: 80px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+}
+.slideshow-container {
+    position: relative;
+    max-width: 1500px;
+    margin: auto;
+}
+.mySlides {
+    display: none;
+}
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none
+}
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+.parag {
+    position: absolute;
+    top: 30%; 
+    margin-left: 60%;
+}
+.parag h1 {
+    background:#fff; 
+    text-transform: uppercase; 
+    font-family: Georgia, 'Times New Roman', Times, serif; 
+    font-size: 1.5rem; 
+    font-weight: bolder; 
+    padding: 30px; 
+    border-radius: 70px; 
+    align-items: center; 
+    text-align: start; 
+    margin-right: 60px; 
+    position: relative;
+}
+.parag p {
+    background: #2e2e2e; 
+    text-transform: capitalize;
+    font-family: Georgia, 'Times New Roman', Times, serif; 
+    font-size: 1.5rem;
+    padding: 20px; 
+    border-radius: 70px; 
+    align-items: center; 
+    text-align: start; 
+    margin-right: 60px; 
+    position: absolute; 
+    top: 60%;
+}
+.divider {
+    display: flex;
+    align-items: center;
+}
+.divider::before, .divider::after {
+  flex: 1;
+  content: '';
+  padding: 2px;
+  background-color: var(--projects);
+  margin: 5px;
+}
+.building {
+    display: flex;
+    padding: 20px;
+    gap: 50px;
+}
+.img-container {
+    color: #fff; 
+    width: 100%; 
+    height: auto;
+}
+.img-container img {
+    width:100%; 
+    object-fit: cover; 
+    gap: 12px;
+}
+.divider::before, .dividers::after {
+    flex: 1;
+    content: '';
+    padding: 2px;
+    background-color: black;
+    margin: 5px;
+}
+.slider-container {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+} 
+div.gallery {
+    border: 1 px solid #ccc;
+}
+div.gallery:hover {
+    border: 1px solid #777;
+}
+div.gallery img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.company-policy {
+    display: flex;
+    gap:  20px;
+    justify-content: space-between;
+}
+#myVideo {
+    min-width: 100%;
+    min-height: 100%;
+    align-items: center;
+
+
+}
+.video-container {
+    padding: 30px;
+    border-radius: 20px;
+    width: 100%;
+    background: #000;
+}
+#myBtn {
+    width: 200px;
+    font-size: 18px;
+    padding: 10px;
+    border: none;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+}
+
+#myBtn:hover {
+    background: #ddd;
+    color: black;
+}
+.creative {
+    font-weight: bold;
+    font-size: x-large;
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+}
+
+.Testimonial-container {
+    width: 500px;
+    height: 100px;
+    background-color: slateblue;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgb(0, 0, 0.03);
+    min-width: 400px;
+    padding: 70px 20px;
+    margin: 5px;
+    color: white;
+    position: relative;
+    align-items: center;
+    margin-left: 400px;
+}
+.testimonials img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -50px;
+}
+.username {
+    font-size: 13px;
+    font-weight: 100;
+}
+.footer-heading {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    background: #2e2e2e;
+    margin-top: 50px;
+}
+}
+@media(max-width: 1200px) {
+    .welcome-msg {
+    display: flex;
+    justify-content: space-between;
+    background: #2e2e2e;
+    align-items: center;
+    text-align: center;
+    color: #fff;
+    padding: 20px;
+}
+.vl {
+    border-left: 1px solid #454545;
+    height: 30px;
+}
+.const-number {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+.logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.numb {
+    display: flex;
+    align-items: center; 
+}
+.mobile-numbers {
+    display: flex; 
+    justify-content: space-between; 
+    gap: 30px; 
+    align-items: center;
+}
+.address {
+    display: flex; 
+    justify-content: space-between; 
+    gap: 30px;
+}
+.num:hover {
+    color: #efae16;
+    animation: 5sec ease;
+    border-style: none;
+}
+
+.navbar {
+    background: #2e2e2e;
+    border-radius: 80px;
+    margin: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+}
+.slideshow-container {
+    position: relative;
+    max-width: 1500px;
+    margin: auto;
+}
+.mySlides {
+    display: none;
+}
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none
+}
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+}
+.parag {
+    position: absolute;
+    top: 30%; 
+    margin-left: 60%;
+}
+.parag h1 {
+    background:#fff; 
+    text-transform: uppercase; 
+    font-family: Georgia, 'Times New Roman', Times, serif; 
+    font-size: 1.5rem; 
+    font-weight: bolder; 
+    padding: 30px; 
+    border-radius: 70px; 
+    align-items: center; 
+    text-align: start; 
+    margin-right: 60px; 
+    position: relative;
+}
+.parag p {
+    background: #2e2e2e; 
+    text-transform: capitalize;
+    font-family: Georgia, 'Times New Roman', Times, serif; 
+    font-size: 1.5rem;
+    padding: 20px; 
+    border-radius: 70px; 
+    align-items: center; 
+    text-align: start; 
+    margin-right: 60px; 
+    position: absolute; 
+    top: 60%;
+}
+.divider {
+    display: flex;
+    align-items: center;
+}
+.divider::before, .divider::after {
+  flex: 1;
+  content: '';
+  padding: 2px;
+  background-color: var(--projects);
+  margin: 5px;
+}
+.building {
+    display: flex;
+    padding: 20px;
+    gap: 50px;
+}
+.img-container {
+    color: #fff; 
+    width: 100%; 
+    height: auto;
+}
+.img-container img {
+    width:100%; 
+    object-fit: cover; 
+    gap: 12px;
+}
+.divider::before, .dividers::after {
+    flex: 1;
+    content: '';
+    padding: 2px;
+    background-color: black;
+    margin: 5px;
+}
+.slider-container {
+    padding: 0 6px;
+    float: left;
+    width: 24.99999%;
+} 
+div.gallery {
+    border: 1 px solid #ccc;
+}
+div.gallery:hover {
+    border: 1px solid #777;
+}
+div.gallery img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.company-policy {
+    display: flex;
+    gap:  20px;
+    justify-content: space-between;
+}
+#myVideo {
+    min-width: 100%;
+    min-height: 100%;
+    align-items: center;
+
+
+}
+.video-container {
+    padding: 30px;
+    border-radius: 20px;
+    width: 100%;
+    background: #000;
+}
+#myBtn {
+    width: 200px;
+    font-size: 18px;
+    padding: 10px;
+    border: none;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+}
+
+#myBtn:hover {
+    background: #ddd;
+    color: black;
+}
+.creative {
+    font-weight: bold;
+    font-size: x-large;
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+}
+
+.Testimonial-container {
+    width: 500px;
+    height: 100px;
+    background-color: slateblue;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgb(0, 0, 0.03);
+    min-width: 400px;
+    padding: 70px 20px;
+    margin: 5px;
+    color: white;
+    position: relative;
+    align-items: center;
+    margin-left: 400px;
+}
+.testimonials img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -50px;
+}
+.username {
+    font-size: 13px;
+    font-weight: 100;
+}
+.footer-heading {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    background: #2e2e2e;
+    margin-top: 50px;
+}
+}
