--- a/css/style.css
+++ b/css/style.css
@@ -247,6 +247,7 @@ div.gallery img {
     color: white;
     position: relative;
     align-items: center;
+    margin-left: 200px;
 }
 .testimonials img {
     width: 100px;
