--- a/css/style.css
+++ b/css/style.css
@@ -210,8 +210,9 @@ div.gallery img {
 .video-container {
     padding: 20px;
     border-radius: 20px;
-    width: 80%;
+    width: 100%;
     background: #000;
+    align-items: center;
 }
 #myBtn {
     width: 200px;
@@ -247,7 +248,6 @@ div.gallery img {
     color: white;
     position: relative;
     align-items: center;
-    margin-left: 200px;
 }
 .testimonials img {
     width: 100px;
